k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-site-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: static-site.jozefcvik.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static-site
                port:
                  number: 80
