k8s/static-site-argocd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-site-argocd
  namespace: static-site-argocd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: static-site-argocd
  template:
    metadata:
      labels:
        app: static-site-argocd
    spec:
      containers:
        - name: static-site-argocd
          image: jozefcvik/static-site-argocd:0ca2fcf5dc2b8d6dc5acf5c1a899ebf6a36b2c3a
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: static-site-argocd
  namespace: static-site-argocd
spec:
  selector:
    app: static-site-argocd
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-site-argocd-ingress
  namespace: static-site-argocd
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: static-site-argocd.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static-site-argocd
                port:
                  number: 80
